Fixed shop name overflowing on phones

--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -185,7 +185,7 @@
     display: flex;
     flex-direction: column;
     align-items: left;
-    padding-bottom: 45px;
+    padding-bottom: 50px;
     margin-top: 10px;
     position: relative;
 }
@@ -224,12 +224,13 @@
 .shopInfo {
     display: flex;
     position: absolute;
-    bottom: 23px;
+    bottom: 25px;
     font-size: 0.7em;
     justify-content: center;
     align-items: center;
     cursor: pointer;
     font-weight: 100;
+    white-space: nowrap;
 }
 
 .shopInfo img {
@@ -256,6 +257,10 @@
 @media (max-width: 720px) {
     .grid {
         grid-template-columns: repeat(2, 1fr);
+    }
+    .container {
+        padding-left: 4%;
+        padding-right: 4%;
     }
 }
 
